syntax = "proto3";

package ai.lzy.priv.v2;

import "ai/lzy/priv/v2/lzy-server.proto";

option java_outer_classname = "LzyStorageApi";
option java_package = "ai.lzy.priv.v2";

service LzyStorage {
  rpc CreateS3Bucket (CreateS3BucketRequest) returns (CreateS3BucketResponse);
  rpc DeleteS3Bucket (DeleteS3BucketRequest) returns (DeleteS3BucketResponse);

  rpc GetS3BucketCredentials (GetS3BucketCredentialsRequest) returns (GetS3BucketCredentialsResponse);
}

message CreateS3BucketRequest {
  string bucket = 1;
  // TODO: size limit, ttl and other settings
}

message CreateS3BucketResponse {
}

message DeleteS3BucketRequest {
  string bucket = 1;
}

message DeleteS3BucketResponse {
}

message GetS3BucketCredentialsRequest {
  string bucket = 1;
}

message GetS3BucketCredentialsResponse {
  oneof credentials {
    AmazonCredentials amazon = 1;
    AzureCredentials azure = 2;
    AzureSASCredentials azureSas = 4;
  }
}
